# tpc-test-project

./: .gitignore  README.md  db.sqlite3  db_test.sqlite3  manage.py  pyproject.toml
core/: admin.py  exceptions.py  mail.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py
core/tests/: factories.py  test_api.py
core/tests/factories/: core_factories.py
tests/: test_api.py
tests/factories/: core_factories.py
tests/test_core/: test_api.py  test_authentication.py  test_product_admin.py
tpc_test_project/: asgi.py  settings.py  urls.py  wsgi.py
