[tool.poetry]
name = "tpc-test-project"
version = "0.1.0"
description = ""
authors = ["Serge Deugoue <deugouserge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"

[tool.poetry.dev-dependencies]
django = "^5.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
