[project]
name = "tpc-test-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Serge Deugoue", email = "deugouserge@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.1",
    "markdown>=3.6",
    "django-filter>=24.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
