[project]
name = "tpc-test-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Serge Deugoue", email = "deugouserge@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.1",
    "markdown>=3.6",
    "django-filter>=24.2",
    "djangorestframework-simplejwt>=5.3.1",
    "django-money>=3.5.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "factory-boy>=3.3.0",
    "pytest>=8.2.1",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE = "tpc_test_project.settings"
    python_files = ["tests.py", "test_*.py", "*_tests.py"]